feat: typescript support

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@blockquote/create-wc",
   "version": "1.1.0",
+  "description": "Web component with Lit scaffolding - Extending Open Web Component",
   "keywords": [
     "LitElement",
     "web-component",
@@ -10,33 +11,32 @@
     "openwc",
     "generator"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
-  "description": "Web component with Lit scaffolding - Extending Open Web Component",
-  "license": "MIT",
-  "type": "module",
+  "homepage": "https://github.com/oscarmarina/create",
   "repository": {
     "type": "git",
     "url": "https://github.com/oscarmarina/create.git"
   },
-  "homepage": "https://github.com/oscarmarina/create",
+  "license": "MIT",
   "author": "Oscar Marina",
+  "type": "module",
   "bin": {
     "create-blockquote-wc": "./src/create.js"
-  },
-  "scripts": {
-    "start": "node ./src/create.js",
-    "lint": "npm run lint:eslint && npm run lint:prettier",
-    "lint:eslint": "eslint --ext .js,.mjs,.cjs .",
-    "lint:prettier": "prettier \"**/*.{js,mjs,cjs,md.json}\" --check --ignore-path .eslintignore",
-    "format": "eslint --ext .ts,.js,.mjs,.cjs  --fix && prettier \"**/*.{ts,js,mjs,cjs,md}\" --check --ignore-path .eslintignore --write"
   },
   "files": [
     "/src/"
   ],
-  "engines": {
-    "node": ">=14.15.0"
+  "scripts": {
+    "format": "eslint --ext .ts,.js,.mjs,.cjs --fix && prettier \"**/*.{ts,js,mjs,cjs,md}\" --check --ignore-path .eslintignore --write",
+    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "lint:eslint": "eslint --ext .js,.mjs,.cjs .",
+    "lint:prettier": "prettier \"**/*.{js,mjs,cjs,md.json}\" --check --ignore-path .eslintignore",
+    "start": "node ./src/create.js"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "printWidth": 100,
+    "singleQuote": true,
+    "trailingComma": "all"
   },
   "dependencies": {
     "@open-wc/create": "^0.37.95",
@@ -51,10 +51,10 @@
     "eslint-config-prettier": "^8.2.0",
     "prettier": "^2.2.1"
   },
-  "prettier": {
-    "singleQuote": true,
-    "arrowParens": "always",
-    "printWidth": 100,
-    "trailingComma": "all"
+  "engines": {
+    "node": ">=14.15.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
