--- a/src/wc-lit-element/templates/package.json
+++ b/src/wc-lit-element/templates/package.json
@@ -5,19 +5,12 @@
     "/define/",
     "/src/",
     "index.js",
-    "!**/*.scss"
+    "!/**/*.scss"
   ],
   "scripts": {
-    "start": "concurrently -k -r \"npm:sass:watch\" \"npm:vite\"",
+    "start:wds": "concurrently -k -r \"npm:sass:watch\" \"npm:wds\"",
+    "wds": "web-dev-server",
     "sass:watch": "sass-style-template",
-    "vite": "vite"
-  },
-  "dependencies": {
-    "lit": "^2.0.2"
-  },
-  "devDependencies": {
-    "vite": "^2.6.7",
-    "@web/dev-server": "^0.1.25"
-
+    "build": "echo \"This is not a TypeScript project, so no need to build.\""
   }
 }
