fix: lint-staged

--- a/src/common-linting/templates/package.json
+++ b/src/common-linting/templates/package.json
@@ -5,8 +5,17 @@
     }
   },
   "lint-staged": {
-    "**/*.{js,ts,json,html}": [
-      "npm run format"
+    "index.*": [
+      "npm run format:eslint"
+    ],
+    "{src,define,test}/**/*.{js,ts,json,html}": [
+      "npm run format:eslint"
+    ],
+    "**/*.{js,ts,json,html,md}": [
+      "npm run format:prettier"
+    ],
+    "**/*.{scss,css}": [
+      "npm run format:stylelint"
     ]
   },
   "eslintConfig": {
