chore: add eslint log filenames

--- a/src/common-linting/templates/package.json
+++ b/src/common-linting/templates/package.json
@@ -5,10 +5,7 @@
     }
   },
   "lint-staged": {
-    "index.*": [
-      "npm run format:eslint"
-    ],
-    "{src,define,test}/**/*.{js,ts,json,html}": [
+    "**/*.{js,ts,html}": [
       "npm run format:eslint"
     ],
     "**/*.{js,ts,json,html,md}": [
@@ -19,6 +16,9 @@
     ]
   },
   "eslintConfig": {
+    "plugins": [
+      "log-filenames"
+    ],
     "extends": [
       "prettier",
       "@open-wc"
@@ -46,21 +46,22 @@
   },
   "scripts": {
     "format": "npm run format:eslint && npm run format:prettier && npm run format:stylelint",
-    "format:eslint": "eslint \"{src,define,test}/**/*.{js,ts,json,html}\" \"index.*\" --fix --ignore-path .gitignore",
+    "format:eslint": "eslint \"**/*.{js,ts,html}\" --fix --ignore-path .gitignore",
     "format:prettier": "prettier \"**/*.{js,ts,json,html,md}\" --write --ignore-path .gitignore",
-    "format:stylelint": "stylelint --fix --allow-empty-input --ignore-path .gitignore \"**/*.{scss,css}\"",
+    "format:stylelint": "stylelint \"**/*.{scss,css}\" --fix --allow-empty-input --ignore-path .gitignore",
     "lint": "npm run lint:eslint && npm run lint:prettier && npm run lint:stylelint",
-    "lint:eslint": "eslint \"{src,define,test}/**/*.{js,ts,json,html}\" \"index.*\" --ignore-path .gitignore",
+    "lint:eslint": "eslint \"**/*.{js,ts,html}\" --ignore-path .gitignore",
     "lint:prettier": "prettier \"**/*.{js,ts,json,html,md}\" --check --ignore-path .gitignore",
-    "lint:stylelint": "stylelint --allow-empty-input --ignore-path .gitignore \"**/*.{scss,css}\""
+    "lint:stylelint": "stylelint \"**/*.{scss,css}\" --allow-empty-input --ignore-path .gitignore"
   },
   "devDependencies": {
-    "eslint": "^8.0.0",
     "@open-wc/eslint-config": "^7.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-log-filenames": "^1.0.4",
     "husky": "^4.3.8",
     "lint-staged": "^12.0.0",
     "prettier": "^2.4.1",
-    "eslint-config-prettier": "^8.3.0",
     "stylelint": "^14.0.0",
     "stylelint-config-standard-scss": "^3.0.0"
   }
