--- a/src/wc-lit-element-ts/templates/package.json
+++ b/src/wc-lit-element-ts/templates/package.json
@@ -1,4 +1,8 @@
 {
+  "exports": {
+    ".": "./dist/index.js",
+    "./<%= tagName %>.js": "./dist/define/<%= tagName %>.js"
+  },
   "main": "dist/index.js",
   "module": "dist/index.js",
   "files": [
@@ -6,19 +10,15 @@
     "/dist/index.*",
     "!/dist/test/"
   ],
-  "exports": {
-    ".": "./dist/index.js",
-    "./<%= tagName %>.js": "./dist/define/<%= tagName %>.js"
-  },
   "scripts": {
-    "start:wds": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"npm:sass:watch\" \"npm:wds\"",
-    "wds": "web-dev-server",
-    "sass:watch": "sass-style-template -j ts",
     "build": "npm run build:tsc && npm run dev:vite",
-    "build:tsc": "tsc"
+    "build:tsc": "tsc",
+    "sass:watch": "sass-style-template -j ts",
+    "start:wds": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"npm:sass:watch\" \"npm:wds\"",
+    "wds": "web-dev-server"
   },
   "devDependencies": {
-    "typescript": "^4.4.4",
-    "tslib": "^2.3.1"
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.4"
   }
 }
