--- a/src/wc-lit-element/templates/package.json
+++ b/src/wc-lit-element/templates/package.json
@@ -8,9 +8,9 @@
     "!/**/*.scss"
   ],
   "scripts": {
-    "start:wds": "concurrently -k -r \"npm:sass:watch\" \"npm:wds\"",
-    "wds": "web-dev-server",
+    "build": "echo \"This is not a TypeScript project, so no need to build.\"",
     "sass:watch": "sass-style-template",
-    "build": "echo \"This is not a TypeScript project, so no need to build.\""
+    "start:wds": "concurrently -k -r \"npm:sass:watch\" \"npm:wds\"",
+    "wds": "web-dev-server"
   }
 }
