fix: eslint-config

--- a/src/common-linting/templates/package.json
+++ b/src/common-linting/templates/package.json
@@ -44,11 +44,18 @@
       "log-filenames"
     ],
     "extends": [
-      "prettier",
-      "@open-wc"
+      "@open-wc",
+      "prettier"
     ],
     "rules": {
       "class-methods-use-this": "off",
+      "no-unused-expressions": [
+        "error",
+        {
+          "allowShortCircuit": true,
+          "allowTernary": true
+        }
+      ],
       "object-curly-newline": "off",
       "import/extensions": [
         "error",
