--- a/src/common-repo/templates/package.json
+++ b/src/common-repo/templates/package.json
@@ -24,6 +24,7 @@
     "lit": "^2.0.2"
   },
   "devDependencies": {
+    "@blockquote/rollup-plugin-total-bundlesize": "^1.0.0",
     "@blockquote/sass-style-template": "^2.0.0",
     "@blockquote/test-runner-mocha-style-reporter": "^1.0.0",
     "@custom-elements-manifest/analyzer": "^0.5.3",
