--- a/src/common-linting/templates/package.json
+++ b/src/common-linting/templates/package.json
@@ -34,12 +34,16 @@
       {
         "files": "*.{scss,css}",
         "options": {
+          "printWidth": 280,
           "singleQuote": false
         }
       }
     ]
   },
   "eslintConfig": {
+    "parserOptions": {
+      "ecmaVersion": "latest"
+    },
     "plugins": [
       "log-filenames"
     ],
@@ -69,8 +73,8 @@
         {
           "devDependencies": [
             "**/test/**/*.{js,ts}",
-            "**/*.config.{js,mjs,cjs}",
-            "**/*.conf.{js,mjs,cjs}"
+            "**/*.config.{js,ts,mjs,cjs}",
+            "**/*.conf.{js,ts,mjs,cjs}"
           ]
         }
       ],
@@ -82,7 +86,10 @@
     "extends": "stylelint-config-standard-scss",
     "rules": {
       "custom-property-pattern": null,
-      "max-line-length": null
+      "max-line-length": null,
+      "no-duplicate-selectors": null,
+      "color-function-notation": null,
+      "alpha-value-notation": null
     }
   },
   "devDependencies": {
