--- a/src/wc-lit-element-ts/templates/tsconfig.json
+++ b/src/wc-lit-element-ts/templates/tsconfig.json
@@ -7,6 +7,7 @@
     "declarationMap": true,
     "sourceMap": true,
     "inlineSources": true,
+    "esModuleInterop": true,
     "outDir": "./dist",
     "rootDirs": ["./src", "./define", ".test/"],
     "strict": true,
@@ -22,6 +23,6 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitOverride": true
   },
-  "include": ["src/**/*.ts", "define/**/*.ts", "test/**/*.ts", "./index.ts"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*.ts", "define/**/*.ts", "test/**/*.ts", "./index.ts", "types/**/*.d.ts"],
+  "exclude": ["node_modules/**"]
 }
