--- a/src/common-repo/templates/package.json
+++ b/src/common-repo/templates/package.json
@@ -10,6 +10,7 @@
   "author": "<%= tagName %>",
   "license": "MIT",
   "customElements": "custom-elements.json",
+  "type": "module",
   "scripts": {
     "start": "concurrently -k -r \"npm:sass:watch\" \"npm:vite\"",
     "vite": "vite",
@@ -26,16 +27,16 @@
     "@blockquote/rollup-plugin-total-bundlesize": "^1.0.0",
     "@blockquote/sass-style-template": "^2.1.2",
     "@blockquote/coverage-table-reporter": "^1.0.0",
-    "@custom-elements-manifest/analyzer": "^0.6.4",
+    "@custom-elements-manifest/analyzer": "^0.6.6",
     "@ungap/global-this": "^0.4.4",
-    "@web/dev-server": "^0.1.34",
+    "@web/dev-server": "^0.1.35",
     "@web/rollup-plugin-html": "^1.11.0",
-    "@webcomponents/shadycss": "^1.11.0",
-    "@webcomponents/webcomponentsjs": "^2.6.0",
-    "concurrently": "^7.4.0",
+    "@webcomponents/shadycss": "^1.11.1",
+    "@webcomponents/webcomponentsjs": "^2.7.0",
+    "concurrently": "^7.6.0",
     "rollup-plugin-copy": "^3.4.0",
     "tiny-array-flat-polyfill": "^0.2.1",
-    "vite": "^3.2.0",
+    "vite": "^3.2.5",
     "sort-package-json": "^2.1.0"
   },
   "publishConfig": {
