--- a/src/wc-lit-element-ts/templates/package.json
+++ b/src/wc-lit-element-ts/templates/package.json
@@ -1,7 +1,21 @@
 {
   "exports": {
-    ".": "./dist/index.js",
-    "./<%= tagName %>.js": "./dist/define/<%= tagName %>.js"
+    ".": {
+      "default": "./dist/index.js"
+    },
+    "./package.json": "./package.json",
+    "./src/<%= className %>.js": {
+      "default": "./dist/src/<%= className %>.js"
+    },
+    "./define/<%= tagName %>.js": {
+      "default": "./dist/define/<%= tagName %>.js"
+    },
+    "./index.js": {
+      "default": "./dist/index.js"
+    },
+    "./src/styles/<%= className %>-styles.js": {
+      "default": "./dist/src/styles/<%= className %>-styles.js"
+    }
   },
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -18,7 +32,7 @@
     "wds": "web-dev-server"
   },
   "devDependencies": {
-    "tslib": "^2.4.0",
-    "typescript": "^4.8.3"
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.3"
   }
 }
