--- a/src/wc-lit-element-ts/templates/package.json
+++ b/src/wc-lit-element-ts/templates/package.json
@@ -27,12 +27,10 @@
   "scripts": {
     "build": "npm run build:tsc && npm run dev:vite",
     "build:tsc": "tsc",
-    "sass:watch": "sass-style-template -j ts",
-    "start:wds": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"npm:sass:watch\" \"npm:wds\"",
-    "wds": "web-dev-server"
+    "sass:watch": "sass-style-template -j ts"
   },
   "devDependencies": {
     "tslib": "^2.5.0",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.4"
   }
 }
