--- a/src/common-repo/templates/package.json
+++ b/src/common-repo/templates/package.json
@@ -18,7 +18,8 @@
     "preview:vite": "vite preview",
     "analyze": "cem analyze --litelement --globs \"{src,define}/**/*.{js,ts}\" \"index.js\"",
     "sort:package": "npx sort-package-json",
-    "postinstall": "npm run sort:package"
+    "postinstall": "npm run sort:package",
+    "prepare": "husky install"
   },
   "dependencies": {
     "lit": "^2.5.0"
@@ -35,7 +36,7 @@
     "concurrently": "^8.0.1",
     "rollup-plugin-copy": "^3.4.0",
     "tiny-array-flat-polyfill": "^0.2.1",
-    "vite": "^4.3.1",
+    "vite": "^4.3.2",
     "sort-package-json": "^2.4.1"
   },
   "publishConfig": {
