chore: update dependencies

--- a/src/wc-lit-element/templates/package.json
+++ b/src/wc-lit-element/templates/package.json
@@ -3,7 +3,9 @@
     ".": {
       "default": "./index.js"
     },
-    "./package.json": "./package.json",
+    "./package.json": {
+      "default": "./package.json"
+    },
     "./src/<%= className %>.js": {
       "default": "./src/<%= className %>.js"
     },
