--- a/src/wc-lit-element-ts/templates/package.json
+++ b/src/wc-lit-element-ts/templates/package.json
@@ -3,7 +3,9 @@
     ".": {
       "default": "./dist/index.js"
     },
-    "./package.json": "./package.json",
+    "./package.json": {
+      "default": "./package.json"
+    },
     "./src/<%= className %>.js": {
       "default": "./dist/src/<%= className %>.js"
     },
@@ -30,7 +32,7 @@
     "sass:watch": "sass-style-template -j ts"
   },
   "devDependencies": {
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.4"
+    "tslib": "^2.6.0",
+    "typescript": "^5.1.6"
   }
 }
