feat: update tsconfig

--- a/src/wc-lit-element-ts/templates/tsconfig.json
+++ b/src/wc-lit-element-ts/templates/tsconfig.json
@@ -1,19 +1,19 @@
 {
   "compilerOptions": {
-    "target": "es2019",
-    "lib": ["es2020", "DOM", "DOM.Iterable"],
+    "target": "es2021",
+    "lib": ["es2021", "DOM", "DOM.Iterable"],
     "experimentalDecorators": true,
-    "useDefineForClassFields": false,
     "module": "es2020",
     "moduleResolution": "bundler",
     "rootDirs": ["./src", "./define", ".test/"],
+    "resolveJsonModule": true,
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
     "outDir": "./dist",
     "inlineSources": true,
+    "isolatedModules": true,
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitAny": true,
