--- a/src/common-linting/templates/package.json
+++ b/src/common-linting/templates/package.json
@@ -74,7 +74,8 @@
         }
       ],
       "import/no-unresolved": "off",
-      "import/prefer-default-export": "off"
+      "import/prefer-default-export": "off",
+      "lit/no-native-attributes": "off"
     }
   },
   "stylelint": {
@@ -88,13 +89,13 @@
   },
   "devDependencies": {
     "@open-wc/eslint-config": "^12.0.0",
-    "eslint": "^8.44.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-log-filenames": "^1.0.6",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.0",
-    "stylelint": "^15.10.1",
+    "stylelint": "^15.10.2",
     "stylelint-config-standard-scss": "^10.0.0"
   }
 }
