--- a/src/common-repo/templates/package.json
+++ b/src/common-repo/templates/package.json
@@ -34,8 +34,9 @@
     "@web/rollup-plugin-html": "^2.0.1",
     "concurrently": "^8.2.1",
     "rollup-plugin-copy": "^3.5.0",
-    "vite": "^4.4.9",
-    "sort-package-json": "^2.5.1"
+    "sort-package-json": "^2.6.0",
+    "ts-lit-plugin": "^2.0.0-pre.1",
+    "vite": "^4.4.9"
   },
   "publishConfig": {
     "access": "public"
