--- a/src/linting-eslint-ts/templates/package.json
+++ b/src/linting-eslint-ts/templates/package.json
@@ -4,6 +4,11 @@
     "plugins": [
       "@typescript-eslint"
     ],
+    "extends": [
+      "@open-wc",
+      "plugin:@typescript-eslint/recommended",
+      "prettier"
+    ],
     "rules": {
       "indent": [
         "error",
@@ -15,10 +20,15 @@
           ]
         }
       ],
-      "no-unused-vars": "off",
-      "@typescript-eslint/no-unused-vars": [
-        "error"
-      ]
+      "@typescript-eslint/ban-types": "off",
+      "@typescript-eslint/explicit-function-return-type": "off",
+      "@typescript-eslint/explicit-module-boundary-types": "off",
+      "@typescript-eslint/no-array-constructor": "error",
+      "@typescript-eslint/no-empty-function": "off",
+      "@typescript-eslint/no-explicit-any": "error",
+      "@typescript-eslint/no-loss-of-precision": "error",
+      "@typescript-eslint/no-namespace": "error",
+      "@typescript-eslint/no-non-null-assertion": "off"
     }
   },
   "devDependencies": {
