chore: update dependencies - lit3

--- a/src/common-repo/templates/package.json
+++ b/src/common-repo/templates/package.json
@@ -22,21 +22,21 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "lit": "^2.8.0"
+    "lit": "^3.0.2"
   },
   "devDependencies": {
     "@blockquote/cem-to-markdown-readme": "^1.0.0",
     "@blockquote/coverage-table-reporter": "^1.2.0",
     "@blockquote/rollup-plugin-total-bundlesize": "^2.1.1",
     "@blockquote/sass-style-template": "^3.0.2",
-    "@custom-elements-manifest/analyzer": "^0.8.4",
+    "@custom-elements-manifest/analyzer": "^0.9.0",
     "@ungap/global-this": "^0.4.4",
-    "@web/rollup-plugin-html": "^2.0.1",
-    "concurrently": "^8.2.1",
+    "@web/rollup-plugin-html": "^2.1.0",
+    "concurrently": "^8.2.2",
     "rollup-plugin-copy": "^3.5.0",
     "sort-package-json": "^2.6.0",
-    "ts-lit-plugin": "^2.0.0-pre.1",
-    "vite": "^4.4.11"
+    "ts-lit-plugin": "^2.0.1",
+    "vite": "^4.5.0"
   },
   "publishConfig": {
     "access": "public"
