--- a/src/common-linting/templates/package.json
+++ b/src/common-linting/templates/package.json
@@ -68,6 +68,7 @@
       ],
       "import/no-unresolved": "off",
       "import/prefer-default-export": "off",
+      "lit/no-classfield-shadowing": "off",
       "lit/no-native-attributes": "off"
     }
   },
@@ -81,13 +82,13 @@
     }
   },
   "devDependencies": {
-    "@open-wc/eslint-config": "^12.0.0",
-    "eslint": "^8.51.0",
+    "@open-wc/eslint-config": "^12.0.2",
+    "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
+    "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
-    "stylelint": "^15.10.3",
-    "stylelint-config-standard-scss": "^11.0.0"
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard-scss": "^11.1.0"
   }
 }
