--- a/src/common-repo/templates/package.json
+++ b/src/common-repo/templates/package.json
@@ -19,7 +19,7 @@
     "analyze": "cem analyze --litelement --globs \"{src,define}/**/*.{js,ts}\" \"index.js\"",
     "sort:package": "npx sort-package-json",
     "postinstall": "npm run sort:package",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "dependencies": {
     "lit": "^3.1.1"
@@ -37,7 +37,7 @@
     "concurrently": "^8.2.2",
     "sort-package-json": "^2.6.0",
     "ts-lit-plugin": "^2.0.2",
-    "vite": "^5.0.11"
+    "vite": "^5.0.12"
   },
   "publishConfig": {
     "access": "public"
