--- a/src/common-linting/templates/package.json
+++ b/src/common-linting/templates/package.json
@@ -80,7 +80,8 @@
         }
       ],
       "lit/no-classfield-shadowing": "off",
-      "lit/no-native-attributes": "off"
+      "lit/no-native-attributes": "off",
+      "lit-a11y/click-events-have-key-events": "off"
     }
   },
   "stylelint": {
@@ -99,7 +100,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
-    "stylelint": "^16.2.1",
-    "stylelint-config-standard-scss": "^13.0.0"
+    "stylelint": "^16.5.0",
+    "stylelint-config-standard-scss": "^13.1.0"
   }
 }
