--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockquote/create-wc",
-  "version": "1.96.3",
+  "version": "1.96.4",
   "description": "Web component with Lit scaffolding - Extending Open Web Component",
   "keywords": [
     "LitElement",
@@ -14,13 +14,13 @@
   "homepage": "https://github.com/oscarmarina/create",
   "repository": {
     "type": "git",
-    "url": "https://github.com/oscarmarina/create.git"
+    "url": "git+https://github.com/oscarmarina/create.git"
   },
   "license": "MIT",
   "author": "Oscar Marina",
   "type": "module",
   "bin": {
-    "create-blockquote-wc": "./src/create.js"
+    "create-blockquote-wc": "src/create.js"
   },
   "files": [
     "/src/"
