feat: add new eslint config

--- a/src/wc-lit-element-ts/templates/tsconfig.json
+++ b/src/wc-lit-element-ts/templates/tsconfig.json
@@ -36,5 +36,5 @@
     ],
     "types": ["mocha"]
   },
-  "include": ["src/**/*.ts", "define/**/*.ts", "test/**/*.ts"],
+  "include": ["src/**/*.ts", "define/**/*.ts", "test/**/*.ts"]
 }
