--- a/src/common-repo/templates/package.json
+++ b/src/common-repo/templates/package.json
@@ -22,20 +22,24 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "lit": "^3.1.3"
+    "lit": "^3.1.4"
   },
   "devDependencies": {
     "@blockquote/cem-to-markdown-readme": "^1.0.0",
     "@blockquote/coverage-table-reporter": "^1.2.0",
     "@blockquote/rollup-plugin-externalize-source-dependencies": "^1.0.0",
     "@blockquote/rollup-plugin-total-bundlesize": "^2.1.2",
-    "@blockquote/sass-style-template": "^3.0.2",
+    "@blockquote/sass-style-template": "^3.0.3",
     "@custom-elements-manifest/analyzer": "^0.10.2",
+    "@open-wc/testing": "^4.0.0",
+    "@types/mocha": "^10.0.6",
+    "@web/test-runner": "^0.18.2",
+    "@web/test-runner-playwright": "^0.11.0",
     "@web/rollup-plugin-html": "^2.3.0",
     "concurrently": "^8.2.2",
     "sort-package-json": "^2.10.0",
     "ts-lit-plugin": "^2.0.2",
-    "vite": "^5.2.11"
+    "vite": "^5.3.1"
   },
   "publishConfig": {
     "access": "public"
