--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ## editors
-.idea
-.vscode
-*.code-workspace
+**/.idea
+**/.vscode
+**/.code-workspace
 
 ## system files
 **/.DS_Store
@@ -18,7 +18,7 @@ npm-debug.log
 **/yarn-error.log
 
 ## temp folders
-/.tmp/
+**/.tmp
 
 ## we prefer package-lock.json
 yarn.lock
