fix: update eslint format

--- a/src/common-linting/templates/package.json
+++ b/src/common-linting/templates/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "format": "npm run format:eslint && npm run format:prettier && npm run format:stylelint",
-    "format:eslint": "eslint .",
+    "format:eslint": "eslint . --fix",
     "format:prettier": "prettier \"**/*.{js,ts,json,html}\" --write --ignore-path .prettierignore",
     "format:stylelint": "stylelint \"**/*.{scss,css}\" --fix --allow-empty-input --ignore-path .prettierignore",
     "lint": "npm run lint:eslint && npm run lint:prettier && npm run lint:stylelint",
@@ -49,14 +49,14 @@
     "@open-wc/eslint-config": "^12.0.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "@html-eslint/eslint-plugin": "^0.24.1",
+    "@html-eslint/eslint-plugin": "^0.25.0",
     "@html-eslint/parser": "^0.24.1",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.2",
     "stylelint": "^16.6.1",
     "stylelint-config-standard-scss": "^13.1.0",
-    "@typescript-eslint/eslint-plugin": "^7.13.0",
-    "@typescript-eslint/parser": "^7.13.0"
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1"
   }
 }
