--- a/src/common-linting/templates/package.json
+++ b/src/common-linting/templates/package.json
@@ -21,10 +21,10 @@
     ]
   },
   "prettier": {
-    "arrowParens": "avoid",
-    "printWidth": 100,
     "singleQuote": true,
-    "trailingComma": "all",
+    "bracketSpacing": false,
+    "trailingComma": "es5",
+    "printWidth": 100,
     "overrides": [
       {
         "files": "*.{scss,css}",
@@ -50,11 +50,11 @@
     "@html-eslint/parser": "^0.26.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "typescript-eslint": "^8.1.0",
-    "husky": "^9.1.4",
-    "lint-staged": "^15.2.9",
+    "typescript-eslint": "^8.3.0",
+    "husky": "^9.1.5",
+    "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
-    "stylelint": "^16.8.2",
+    "stylelint": "^16.9.0",
     "stylelint-config-standard-scss": "^13.1.0"
   }
 }
