--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockquote/create-wc",
-  "version": "1.100.0",
+  "version": "1.101.0",
   "description": "Web component with Lit scaffolding - Extending Open Web Component",
   "keywords": [
     "LitElement",
@@ -33,12 +33,12 @@
     "start": "node ./src/create.js"
   },
   "prettier": {
-    "arrowParens": "avoid",
     "bracketSameLine": true,
     "htmlWhitespaceSensitivity": "ignore",
-    "printWidth": 100,
     "singleQuote": true,
-    "trailingComma": "all",
+    "bracketSpacing": false,
+    "trailingComma": "es5",
+    "printWidth": 100,
     "overrides": [
       {
         "files": "*.{scss,css}",
