--- a/src/common-linting/templates/package.json
+++ b/src/common-linting/templates/package.json
@@ -45,12 +45,14 @@
     }
   },
   "devDependencies": {
-    "@open-wc/eslint-config": "^12.0.3",
     "@html-eslint/eslint-plugin": "^0.27.0",
     "@html-eslint/parser": "^0.27.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
-    "typescript-eslint": "^8.8.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-lit": "^1.15.0",
+    "eslint-plugin-lit-a11y": "^4.1.4",
+    "eslint-plugin-wc": "^2.2.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
