--- a/src/common-linting/templates/package.json
+++ b/src/common-linting/templates/package.json
@@ -53,6 +53,8 @@
     "eslint-plugin-lit": "^1.15.0",
     "eslint-plugin-lit-a11y": "^4.1.4",
     "eslint-plugin-wc": "^2.2.0",
+    "@typescript-eslint/parser": "^8.9.0",
+    "typescript-eslint": "^8.8.1",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
