--- a/src/common-linting/templates/package.json
+++ b/src/common-linting/templates/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-wc": "^2.2.0",
     "@typescript-eslint/parser": "^8.9.0",
     "typescript-eslint": "^8.8.1",
+    "globals": "^15.11.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
