--- a/src/common-repo/templates/package.json
+++ b/src/common-repo/templates/package.json
@@ -16,7 +16,7 @@
     "vite": "vite",
     "dev:vite": "vite build",
     "preview:vite": "vite preview",
-    "analyze": "cem analyze --litelement --globs \"{src,define}/**/*.{js,ts}\" \"index.js\"",
+    "analyze": "cem analyze --litelement --globs \"src/**/*.{js,ts}\" \"index.js\"",
     "sort:package": "npx sort-package-json",
     "postinstall": "npm run sort:package",
     "prepare": "husky"
@@ -29,16 +29,15 @@
     "@blockquote/coverage-table-reporter": "^1.2.0",
     "@blockquote/rollup-plugin-externalize-source-dependencies": "^1.0.0",
     "@blockquote/rollup-plugin-total-bundlesize": "^2.1.2",
-    "@blockquote/sass-style-template": "^3.0.3",
+    "@blockquote/sass-style-template": "^3.0.5",
     "@custom-elements-manifest/analyzer": "^0.10.3",
     "@open-wc/testing": "^4.0.0",
     "@types/mocha": "^10.0.9",
     "@web/test-runner": "^0.19.0",
     "@web/test-runner-playwright": "^0.11.0",
     "@web/rollup-plugin-html": "^2.3.0",
-    "concurrently": "^9.0.1",
+    "concurrently": "^9.1.0",
     "sort-package-json": "^2.10.1",
-    "ts-lit-plugin": "^2.0.2",
     "vite": "^5.4.10"
   },
   "publishConfig": {
