--- a/src/common-repo/templates/package.json
+++ b/src/common-repo/templates/package.json
@@ -12,7 +12,7 @@
   "customElements": "custom-elements.json",
   "type": "module",
   "scripts": {
-    "start": "concurrently -k -r \"npm:sass:watch\" \"npm:vite\"",
+    "start": "concurrently -k -r \"npm:vite\" \"npm:sass:watch\"",
     "vite": "vite",
     "dev:vite": "vite build",
     "preview:vite": "vite preview",
@@ -30,12 +30,13 @@
     "@blockquote/rollup-plugin-externalize-source-dependencies": "^1.0.0",
     "@blockquote/rollup-plugin-total-bundlesize": "^2.1.2",
     "@blockquote/sass-style-template": "^4.1.0",
-    "@custom-elements-manifest/analyzer": "^0.10.3",
+    "@custom-elements-manifest/analyzer": "^0.10.4",
     "@open-wc/testing": "^4.0.0",
     "@types/mocha": "^10.0.10",
     "@web/test-runner": "^0.19.0",
     "@web/test-runner-playwright": "^0.11.0",
-    "@web/rollup-plugin-html": "^2.3.0",
+    "@rollup/plugin-multi-entry": "^6.0.1",
+    "rollup-plugin-copy": "^3.5.0",
     "concurrently": "^9.1.0",
     "sort-package-json": "^2.12.0",
     "vite": "^6.0.3"
