--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@blockquote/create-wc",
-  "version": "1.109.1",
+  "version": "1.110.0",
   "description": "Web component with Lit scaffolding - Extending Open Web Component",
   "keywords": [
-    "LitElement",
+    "Lit",
     "web-component",
     "sass",
     "scaffold",
@@ -60,7 +60,7 @@
     "@open-wc/eslint-config": "^12.0.3",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.4.1"
+    "prettier": "^3.4.2"
   },
   "engines": {
     "node": ">=14.15.0"
