--- a/src/common-repo/templates/package.json
+++ b/src/common-repo/templates/package.json
@@ -19,7 +19,8 @@
     "analyze": "cem analyze --litelement --globs \"src/**/*.{js,ts}\" \"index.js\"",
     "sort:package": "npx sort-package-json",
     "postinstall": "npm run sort:package",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "vitest"
   },
   "dependencies": {
     "lit": "^3.2.1"
@@ -31,15 +32,22 @@
     "@blockquote/rollup-plugin-total-bundlesize": "^2.1.2",
     "@blockquote/sass-style-template": "^4.1.0",
     "@custom-elements-manifest/analyzer": "^0.10.4",
+    "@open-wc/semantic-dom-diff": "^0.20.1",
     "@open-wc/testing": "^4.0.0",
+    "playwright": "^1.49.1",
     "@types/mocha": "^10.0.10",
-    "@web/test-runner": "^0.19.0",
-    "@web/test-runner-playwright": "^0.11.0",
     "@rollup/plugin-multi-entry": "^6.0.1",
     "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-node-externals": "^8.0.0",
+    "tinyglobby": "^0.2.10",
     "concurrently": "^9.1.0",
     "sort-package-json": "^2.12.0",
-    "vite": "^6.0.3"
+    "@vitest/browser": "^3.0.0-beta.2",
+    "@vitest/coverage-istanbul": "^3.0.0-beta.2",
+    "@vitest/coverage-v8": "^3.0.0-beta.2",
+    "@vitest/ui": "^3.0.0-beta.2",
+     "vitest": "^3.0.0-beta.2",
+    "vite": "^6.0.4"
   },
   "publishConfig": {
     "access": "public"
